# langchain_huh

./: pyproject.toml  requirements.txt
agents/: agents.ipynb
api/: app.py  client.py
chain/: retriever.ipynb
chatbot/: app.py  locallama.py
groq/: app.py
langchain/: pyproject.toml
langchain/chatbot/: app.py
rag/: simplerag.ipynb
