[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.3.1",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "cassio>=0.1.10",
    "chromadb>=0.5.23",
    "faiss-cpu>=1.13.1",
    "fastapi>=0.124.4",
    "groq>=0.37.1",
    "httpx<0.28.0",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.0.38",
    "langchain-core>=0.1.53",
    "langchain-groq>=0.1.5",
    "langchain-objectbox>=0.1.0",
    "langchain-openai>=0.1.7",
    "langchain-text-splitters>=0.0.2",
    "langchainhub>=0.1.21",
    "langserve>=0.2.3",
    "pypdf>=6.4.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "sse-starlette>=3.0.4",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
]
